# fsae_lapsim

./: .gitignore  CMakeLists.txt  NOTES.md  README.md
.cursor/rules/: CLAUDE.md
apps/: lapsim_cli.cpp  lapsim_viz.cpp
config/: default.yaml
fsae_lapsim/: CMakeLists.txt  README.md
fsae_lapsim/apps/: lapsim_cli.cpp  lapsim_viz.cpp
fsae_lapsim/include/lapsim/: Geometry.hpp  Segment.hpp  Telemetry.hpp  Track.hpp  TrackLoader.hpp  Visualizer.hpp
fsae_lapsim/src/: Segment.cpp  Solver.cpp  TelemetryVisualizer.cpp  Tire.cpp  Track.cpp
fsae_lapsim/tests/: test_aero.cpp  test_friction_circle.cpp  test_track.cpp
include/lapsim/: Aero.hpp  LapTimeSolver.hpp  PhysicsConfig.hpp  RacingLine.hpp  Segment.hpp  Solver.hpp  TelemetryReader.hpp  TelemetryVisualizer.hpp  Tire.hpp  Track.hpp  Vehicle.hpp
src/: Aero.cpp  LapTimeSolver.cpp  PhysicsConfig.cpp  RacingLine.cpp  Segment.cpp  Telemetry.cpp  TelemetryReader.cpp  TelemetryVisualizer.cpp  Track.cpp  TrackLoader.cpp  Vehicle.cpp  Visualizer.cpp
tests/: test_aero.cpp  test_friction_circle.cpp  test_lap_time_solver.cpp  test_physics_config.cpp  test_qss_solver.cpp  test_racing_line.cpp  test_solver.cpp  test_telemetry_export.cpp  test_telemetry_reader.cpp  test_track.cpp  test_vehicle.cpp
tracks/: interview_track.yaml
